WC-XX [BE] add properties to bypass cors and update package script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ quarkus.http.port=8488
 %prod.quarkus.redis.hosts=redis://redis:6379
 %prod.quarkus.redis.health.enabled=false
 
-%prod.quarkus.rest-client."consul-server".uri=http://localhost:8500
 %dev.quarkus.rest-client."consul-server".uri=http://localhost:8500
+%prod.quarkus.rest-client."consul-server".uri=http://consul:8500
+
 
 %dev.ws.max.sessions=10
 %prod.ws.max.sessions=10
