WC-XX [BE] fix autoscaling limits and config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,11 @@ quarkus.http.port=8488
 %dev.quarkus.redis.hosts=redis://localhost:6379
 %dev.quarkus.redis.health.enabled=false
 
+%dev.socket-proxy.uri=http://localhost:2375
+%prod.socket-proxy.uri=http://socket-proxy:2375
+
 %prod.quarkus.redis.hosts=redis://redis:6379
 %prod.quarkus.redis.health.enabled=false
 
 %dev.quarkus.rest-client."consul-server".uri=http://localhost:8500
 %prod.quarkus.rest-client."consul-server".uri=http://consul:8500
-
-
-%dev.ws.max.sessions=10
-%prod.ws.max.sessions=10
