--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ quarkus.http.port=8488
 %dev.socket-proxy.uri=http://localhost:2375
 %prod.socket-proxy.uri=http://socket-proxy:2375
 
+%dev.container-runtime.network=bridge
+%prod.container-runtime.network=bridge
+
 %prod.quarkus.redis.hosts=redis://redis:6379
 %prod.quarkus.redis.health.enabled=false
 
